--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.3",
     "@uniswap/v2-core": "^1.0.1",
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
