--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.0",
     "@uniswap/v2-core": "^1.0.1",
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
@@ -11,7 +12,9 @@
     "graphql-request": "^6.0.0",
     "hardhat": "^2.14.0",
     "mongoose": "^7.1.1",
-    "tiny-invariant": "^1.3.1"
+    "queue": "^7.0.0",
+    "tiny-invariant": "^1.3.1",
+    "ts-mixer": "^6.0.3"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
