--- a/.env-copy
+++ b/.env-copy
@@ -3,3 +3,4 @@ POLYGON_RPC_WS="wss://polygon-mainnet.g.alchemy.com/v2/..."
 OPTIMISM_RPC_WS="wss://opt-mainnet.g.alchemy.com/v2/..."
 ARBITRUM_RPC_WS="wss://arb-mainnet.g.alchemy.com/v2/..."
 MONGODB_URL="mongodb://localhost:27017/..."
+MONGODB_URL_DEV="mongodb://localhost:27017/..."
