nearly complete // working on implementing latest sync block

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
     "ethers-multicall": "^0.2.3",
-    "graphql-request": "^6.0.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "hardhat": "^2.14.0",
     "mongoose": "^7.1.1",
     "queue": "^7.0.0",
